Added: color plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "vim/bundle/color"]
+	path = vim/bundle/color
+	url = https://github.com/vim-scripts/Colour-Sampler-Pack.git
