--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,34 @@
+# Set a Ctrl-b shortcut for reloading your tmux config
+bind r source-file ~/.tmux.conf
+
+# Rename your terminals
+set -g set-titles on
+set -g set-titles-string '#(whoami)@#h - #(curl ipecho.net/plain;echo)'
+set -g default-terminal "xterm-256color"
+# Status bar customization
+set -g status-utf8 on
+set -g status-bg colour18
+set -g status-fg white
+set -g status-interval 5
+set -g status-left-length 90
+set -g status-right-length 60
+#set -g status-left '#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]'
+set -g status-left "#[fg=brightgreen]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 \" $2}') #(ifconfig eth1 | grep 'inet ' | awk '{print \"eth1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+
+
+set -g status-justify left
+set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R' 
+
+set -g pane-active-border-fg colour7
+set -g pane-active-border-bg colour4
+
+#setw -g window-active-style 'bg=#330000' # bg color of active pane
+#setw -g window-style 'bg=black' # bg color of inactive pane(s)
+#######
+#
+# Settings for copy/paste commands
+#
+#######
 setw -g mode-keys vi # vim-style movement
 # in normal tmux mode
 bind Escape copy-mode # `tmux prefix + Escape` starts copy mode.
