--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,19 +5,22 @@ bind r source-file ~/.tmux.conf
 set -g set-titles on
 set -g set-titles-string '#(whoami)@#h - #(curl ipecho.net/plain;echo)'
 set -g default-terminal "xterm-256color"
+# Powerline confiruration
+source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
+#set-option -g default-terminal "screen-256color"
 # Status bar customization
-set -g status-utf8 on
-set -g status-bg colour18
-set -g status-fg white
-set -g status-interval 5
-set -g status-left-length 90
-set -g status-right-length 60
+#set -g status-utf8 on
+#set -g status-bg colour18
+#set -g status-fg white
+#set -g status-interval 5
+#set -g status-left-length 90
+#set -g status-right-length 60
 #set -g status-left '#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]'
-set -g status-left "#[fg=brightgreen]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 \" $2}') #(ifconfig eth1 | grep 'inet ' | awk '{print \"eth1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+#set -g status-left "#[fg=brightgreen]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 \" $2}') #(ifconfig eth1 | grep 'inet ' | awk '{print \"eth1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 
 
-set -g status-justify left
-set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R' 
+#set -g status-justify left
+#set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R' 
 
 set -g pane-active-border-fg colour7
 set -g pane-active-border-bg colour4
