--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,17 @@
+# remap prefix to Control + a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
+# Set a Ctrl-b shortcut for reloading your tmux config
+unbind r
+bind r source-file ~/.tmux.conf
+
+# # quick pane cycling
+ unbind ^A
+bind ^A select-pane -t :.+
+
+
 # Set a Ctrl-b shortcut for reloading your tmux config
 bind r source-file ~/.tmux.conf
 
