--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,7 +19,7 @@ bind r source-file ~/.tmux.conf
 set -g set-titles on
 set -g set-titles-string '#(whoami)@#h - #(curl ipecho.net/plain;echo)'
 set -g default-terminal "xterm-256color"
-# Powerline confiruration
+# Powerline configuration
 #source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
 #set-option -g default-terminal "screen-256color"
 # Status bar customization
