--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,13 +11,12 @@ bind r source-file ~/.tmux.conf
  unbind ^A
 bind ^A select-pane -t :.+
 
-
-# Set a Ctrl-b shortcut for reloading your tmux config
-bind r source-file ~/.tmux.conf
-
 # Rename your terminals
 set -g set-titles on
-set -g set-titles-string '#(whoami)@#h - #(curl ipecho.net/plain;echo)'
+#set -g set-titles-string "#(whoami)@#h - #(curl ipecho.net/plain;echo)"
+set -g set-titles-string "#(whoami)@#h - #(curl icanhazip.com/plain;echo)"
+#
+#set -g set-titles-string '#(whoami)'
 set -g default-terminal "xterm-256color"
 # Powerline configuration
 #source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
