cleaned up old $PATH entries

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,12 +13,11 @@ bind ^A select-pane -t :.+
 
 # Rename your terminals
 set -g set-titles on
-#set -g set-titles-string "#(whoami)@#h - #(curl ipecho.net/plain;echo)"
 set -g set-titles-string "#(whoami)@#h - #(curl icanhazip.com/plain;echo)"
-#
-#set -g set-titles-string '#(whoami)'
+#set -g set-titles-string "#(whoami)@#h - #(curl ipecho.net/plain;echo)"
+
 set -g default-terminal "xterm-256color"
-# Powerline configuration
+# Powerline configuration (reserved for future use)
 #source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
 #set-option -g default-terminal "screen-256color"
 # Status bar customization
