added cmd to copy env variables to tmux session

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,7 +35,10 @@ set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
 
 set -g pane-active-border-fg colour7
 set -g pane-active-border-bg colour4
-
+#  causes these environment variables to be copied from your main shell to any
+#  shells opened within tmux, which then allows ssh-agent to work properly
+#  within those tmux shells.
+set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
 #######
 #
 # Settings for copy/paste commands
