--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,9 @@
 [submodule "vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/vim-flake8"]
-	path = vim/bundle/vim-flake8
-	url = https://github.com/scrooloose/syntastic/syntax_checkers/python/flake8.git
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
-[submodule "vim/bundle/color"]
-	path = vim/bundle/color
-	url = https://github.com/vim-scripts/Colour-Sampler-Pack.git
 [submodule "vim/bundle/scroll"]
 	path = vim/bundle/scroll
 	url = https://github.com/vim-scripts/ScrollColors.git
@@ -19,6 +13,9 @@
 [submodule "vim/bundle/vim-session"]
 	path = vim/bundle/vim-session
     url = https://github.com/xolox/vim-session.git
+[submodule "vim/bundle/vimwiki"]
+	path = vim/bundle/vimwiki
+    url = https://github.com/vimwiki/vimwiki
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
     url = https://github.com/scrooloose/syntastic.git
@@ -31,4 +28,9 @@
 [submodule "tmux/plugins/tpm"]
 	path = tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
-
+[submodule "vim/bundle/color"]
+	path = vim/bundle/color
+	url = https://github.com/vim-scripts/Colour-Sampler-Pack.git
+[submodule "vim/bundle/Colour-Sampler-Pack"]
+	path = vim/bundle/Colour-Sampler-Pack
+	url = https://github.com/vim-scripts/Colour-Sampler-Pack.git
