added comments on tpm plugin manager

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,6 +65,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
-
+# Note: tpm requires tmux >=1.9 Remember to grab ppa:pi-rho
+# Also within tmux run <prefix> <shift> I
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
+run '~/dotfiles/tmux/plugins/tpm/tpm'
