--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,8 +27,9 @@ set -g status-interval 5
 set -g status-left-length 90
 set -g status-right-length 60
 
-set -g status-left "#[fg=brightgreen]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 \" $2}') #(ifconfig eth1 | grep 'inet ' | awk '{print \"eth1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+set -g status-left "#[fg=brightgreen]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig ennp0s25 | grep 'inet ' | awk '{print \"enp0s25 \" $2}') #(ifconfig wlp3s0| grep 'inet ' | awk '{print \"wlp3s0 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 
+#set -g status-left "#[fg=brightgreen]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 \" $2}') #(ifconfig eth1 | grep 'inet ' | awk '{print \"eth1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 
 set -g status-justify left
 set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R' 
