added pane motion and resize commands

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,18 @@ bind r source-file ~/.tmux.conf
  unbind ^A
 bind ^A select-pane -t :.+
 
+# Moving from pane to pane using vi-like commands
+bind j select-pane -D
+bind k select-pane -U
+bind h select-pane -L
+bind l select-pane -R
+
+# Resize panes
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
+
 # Rename your terminals
 set -g set-titles on
 set -g set-titles-string "#(whoami)@#h - #(curl icanhazip.com/plain;echo)"
