added xclip statement to improve tmux copy/paste.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,8 +7,8 @@ bind C-a send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
 
-# # quick pane cycling
- unbind ^A
+# quick pane cycling
+unbind ^A
 bind ^A select-pane -t :.+
 
 # Moving from pane to pane using vi-like commands
@@ -52,6 +52,7 @@ set -g pane-active-border-bg colour4
 #  shells opened within tmux, which then allows ssh-agent to work properly
 #  within those tmux shells.
 set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
+
 #######
 #
 # Settings for copy/paste commands
@@ -64,7 +65,8 @@ bind p paste-buffer # `prefix + p` pastes the latest buffer
 
 # in copy mode…
 bind -t vi-copy v begin-selection # `v` begins a selection. (movement keys to select the desired bits)
-bind -t vi-copy y copy-selection # `y` copies the current selection to one of tmux's "paste buffers"
+bind -t vi-copy y copy-pipe 'xclip -selection clipboard -i'
+# bind -t vi-copy y copy-selection # `y` copies the current selection to one of tmux's "paste buffers"
 bind -t vi-copy V rectangle-toggle # `V` changes between line- and columnwise selection
 
 bind -t vi-copy Y copy-end-of-line # ^1
@@ -74,12 +76,14 @@ bind + delete-buffer
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+# 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
-# Note: tpm requires tmux >=1.9 Remember to grab ppa:pi-rho
+# Note: tpm requires tmux >=1.9 Remember to grab ppa:pi-rho, if necessary
 # Also within tmux run <prefix> <shift> I
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 #run '~/.tmux/plugins/tpm/tpm'
 run '~/dotfiles/tmux/plugins/tpm/tpm'
+#
