Added header to tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,18 @@
+# -------------------------------------------------------------------------- #
+#
+# Name: tmux.conf
+# Purpose: This script contains configuration for tmux. 
+# Compatible:
+# Requirements: >= tmux version 2.1
+#
+# Version: 1.1
+# Author: Kevin Bowen kbowen@gmail.com
+# 
+# Original source:
+# Updated: 20180626
+#
+# -------------------------------------------------------------------------- #
+#
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
