--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,20 +5,20 @@
 # Compatible:
 # Requirements: >= tmux version 2.1
 #
-# Version: 1.1
+# Version: 1.2
 # Author: Kevin Bowen kbowen@gmail.com
 # 
 # Original source:
-# Updated: 20180626
+# Updated: 20180627
 #
 # -------------------------------------------------------------------------- #
-#
+
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Set a Ctrl-b shortcut for reloading your tmux config
+# Set a Ctrl-a shortcut for reloading your tmux config
 unbind r
 bind r source-file ~/.tmux.conf
 
@@ -43,9 +43,7 @@ set -g set-titles on
 set -g set-titles-string "#(whoami)@#h - #(curl icanhazip.com/plain;echo)"
 
 set -g default-terminal "xterm-256color"
-# Powerline configuration (reserved for future use)
-#source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
-#set-option -g default-terminal "screen-256color"
+
 # Status bar customization
 set -g status-utf8 on
 set -g status-bg colour18
@@ -55,8 +53,6 @@ set -g status-left-length 90
 set -g status-right-length 60
 
 set -g status-left "#[fg=brightgreen]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig ennp0s25 | grep 'inet ' | awk '{print \"enp0s25 \" $2}') #(ifconfig wlp3s0| grep 'inet ' | awk '{print \"wlp3s0 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-
-#set -g status-left "#[fg=brightgreen]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig eth0 | grep 'inet ' | awk '{print \"eth0 \" $2}') #(ifconfig eth1 | grep 'inet ' | awk '{print \"eth1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 
 set -g status-justify left
 set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R' 
@@ -69,11 +65,7 @@ set -g pane-active-border-bg colour4
 #  within those tmux shells.
 set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
 
-#######
-#
 # Settings for copy/paste commands
-#
-#######
 setw -g mode-keys vi # vim-style movement
 # in normal tmux mode
 bind Escape copy-mode # `tmux prefix + Escape` starts copy mode.
