Cleaned up comments.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,27 +2,27 @@
 #
 # Name: tmux.conf
 # Purpose: This script contains configuration for tmux. 
-# Compatible:
+# 
 # Requirements: >= tmux version 2.1
 #
 # Version: 1.2
-# Author: Kevin Bowen kbowen@gmail.com
+# Author: Kevin Bowen kevin.bowen@gmail.com
 # 
 # Original source:
-# Updated: 20180627
+# Updated: 20180628
 #
 # -------------------------------------------------------------------------- #
 
-# remap prefix to Control + a
+# Remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Set a Ctrl-a shortcut for reloading your tmux config
+# Set a Ctrl-a shortcut for reloading tmux config
 unbind r
 bind r source-file ~/.tmux.conf
 
-# quick pane cycling
+# Quick pane cycling
 unbind ^A
 bind ^A select-pane -t :.+
 
@@ -38,7 +38,7 @@ bind -r K resize-pane -U 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
-# Rename your terminals
+# Rename terminals
 set -g set-titles on
 set -g set-titles-string "#(whoami)@#h - #(curl icanhazip.com/plain;echo)"
 
@@ -51,16 +51,13 @@ set -g status-fg white
 set -g status-interval 5
 set -g status-left-length 90
 set -g status-right-length 60
-
 set -g status-left "#[fg=brightgreen]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig ennp0s25 | grep 'inet ' | awk '{print \"enp0s25 \" $2}') #(ifconfig wlp3s0| grep 'inet ' | awk '{print \"wlp3s0 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-
 set -g status-justify left
 set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R' 
-
 set -g pane-active-border-fg colour7
 set -g pane-active-border-bg colour4
 
-#  causes these environment variables to be copied from your main shell to any
+#  Pass these environment variables to be passes from main shell to any
 #  shells opened within tmux, which then allows ssh-agent to work properly
 #  within those tmux shells.
 set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
@@ -76,7 +73,6 @@ bind -t vi-copy v begin-selection # `v` begins a selection. (movement keys to se
 bind -t vi-copy y copy-pipe 'xclip -selection clipboard -i'
 # bind -t vi-copy y copy-selection # `y` copies the current selection to one of tmux's "paste buffers"
 bind -t vi-copy V rectangle-toggle # `V` changes between line- and columnwise selection
-
 bind -t vi-copy Y copy-end-of-line # ^1
 bind + delete-buffer
 
