Added mouse and PgUp/PgDn functionality.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,14 +1,13 @@
 # -------------------------------------------------------------------------- #
 #
 # Name: tmux.conf
-# Purpose: This script contains configuration for tmux. 
+# Purpose: tmux configuration settings 
 # 
 # Requirements: >= tmux version 2.1
 #
 # Version: 1.2
 # Author: Kevin Bowen kevin.bowen@gmail.com
 # 
-# Original source:
 # Updated: 20180628
 #
 # -------------------------------------------------------------------------- #
@@ -44,6 +43,17 @@ set -g set-titles-string "#(whoami)@#h - #(curl icanhazip.com/plain;echo)"
 
 set -g default-terminal "xterm-256color"
 
+# Add mouse support
+set-option -g -q mouse on
+bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
+bind-key -t vi-copy PPage halfpage-up
+bind-key -t vi-copy NPage halfpage-down
+#
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind-key -t vi-copy WheelUpPane halfpage-up
+bind-key -t vi-copy WheelDownPane halfpage-down
+
 # Status bar customization
 set -g status-utf8 on
 set -g status-bg colour18
@@ -57,14 +67,12 @@ set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
 set -g pane-active-border-fg colour7
 set -g pane-active-border-bg colour4
 
-#  Pass these environment variables to be passes from main shell to any
-#  shells opened within tmux, which then allows ssh-agent to work properly
-#  within those tmux shells.
+#  Pass these environment variables from main shell to any shells opened within 
+#  tmux, which then allows ssh-agent to work properly within those tmux shells.
 set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
 
 # Settings for copy/paste commands
-setw -g mode-keys vi # vim-style movement
-# in normal tmux mode
+setw -g mode-keys vi # vim-style movement in normal tmux mode 
 bind Escape copy-mode # `tmux prefix + Escape` starts copy mode.
 bind p paste-buffer # `prefix + p` pastes the latest buffer
 
@@ -80,14 +88,13 @@ bind + delete-buffer
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-# 
+ 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
+
 # Note: tpm requires tmux >=1.9 Remember to grab ppa:pi-rho, if necessary
 # Also within tmux run <prefix> <shift> I
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-#run '~/.tmux/plugins/tpm/tpm'
 run '~/dotfiles/tmux/plugins/tpm/tpm'
 #
