Vim plugin cleanup.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,12 +16,24 @@
 [submodule "vim/bundle/Colour-Sampler-Pack"]
 	path = vim/bundle/Colour-Sampler-Pack
 	url = https://github.com/vim-scripts/Colour-Sampler-Pack.git
-[submodule "vim-misc"]
-	path = vim-misc
-	url = https://github.com/xolox/vim-misc.git
 [submodule "vim-session"]
 	path = vim-session
 	url = https://github.com/xolox/vim-session.git
 [submodule "vimwiki"]
 	path = vimwiki
 	url = https://github.com/vimwiki/vimwiki
+[submodule "vim/bundle/vim-misc"]
+	path = vim/bundle/vim-misc
+	url = https://github.com/xolox/vim-misc.git
+[submodule "vim/bundle/vim-session"]
+	path = vim/bundle/vim-session
+	url = https://github.com/xolox/vim-session.git
+[submodule "vim/bundle/vimwiki"]
+	path = vim/bundle/vimwiki
+	url = https://github.com/vimwiki/vimwiki
+[submodule "vim/bundle/vim-devicons"]
+	path = vim/bundle/vim-devicons
+	url = https://github.com/ryanoasis/vim-devicons.git
+[submodule "vim/bundle/nerdtree"]
+	path = vim/bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
