--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,10 +5,10 @@
 # 
 # Requirements: >= tmux version 2.1
 #
-# Version: 1.3
+# Version: 1.4
 # Author: Kevin Bowen kevin.bowen@gmail.com
 # 
-# Updated: 20180809
+# Updated: 20181014
 #
 # -------------------------------------------------------------------------- #
 
@@ -46,16 +46,16 @@ set -g default-terminal "xterm-256color"
 # Add mouse support
 set-option -g -q mouse on
 bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
-bind-key -t vi-copy PPage halfpage-up
-bind-key -t vi-copy NPage halfpage-down
-#
-bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T vi-copy -n PPage halfpage-up
+bind-key -T vi-copy -n NPage halfpage-down
+
+# bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-bind-key -t vi-copy WheelUpPane halfpage-up
-bind-key -t vi-copy WheelDownPane halfpage-down
+bind-key -T vi-copy -n WheelUpPane halfpage-up
+bind-key -T vi-copy -n WheelDownPane halfpage-down
 
 # Status bar customization
-set -g status-utf8 on
+# set -g status-utf8 on
 set -g status-bg colour18
 set -g status-fg white
 set -g status-interval 5
@@ -77,11 +77,11 @@ bind Escape copy-mode # `tmux prefix + Escape` starts copy mode.
 bind p paste-buffer # `prefix + p` pastes the latest buffer
 
 # in copy mode…
-bind -t vi-copy v begin-selection # `v` begins a selection. (movement keys to select the desired bits)
-bind -t vi-copy y copy-pipe 'xclip -selection clipboard -i'
-# bind -t vi-copy y copy-selection # `y` copies the current selection to one of tmux's "paste buffers"
-bind -t vi-copy V rectangle-toggle # `V` changes between line- and columnwise selection
-bind -t vi-copy Y copy-end-of-line # ^1
+bind -T vi-copy v begin-selection # `v` begins a selection. (movement keys to select the desired bits)
+bind -T vi-copy y copy-pipe 'xclip -selection clipboard -i'
+bind -t vi-copy y copy-selection # `y` copies the current selection to one of tmux's "paste buffers"
+bind -T vi-copy V rectangle-toggle # `V` changes between line- and columnwise selection
+bind -T vi-copy Y copy-end-of-line # ^1
 bind + delete-buffer
 
 # List of plugins
