removed old copy+paste commands

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,12 +69,12 @@ bind Escape copy-mode # `tmux prefix + Escape` starts copy mode.
 bind p paste-buffer # `prefix + p` pastes the latest buffer
 
 # in copy mode…
-bind -T vi-copy v begin-selection # `v` begins a selection. (movement keys to select the desired bits)
-bind -T vi-copy y copy-pipe 'xclip -selection clipboard -i'
-bind -t vi-copy y copy-selection # `y` copies the current selection to one of tmux's "paste buffers"
-bind -T vi-copy V rectangle-toggle # `V` changes between line- and columnwise selection
-bind -T vi-copy Y copy-end-of-line # ^1
-bind + delete-buffer
+#bind -T vi-copy v begin-selection # `v` begins a selection. (movement keys to select the desired bits)
+#bind -T vi-copy y copy-pipe 'xclip -selection clipboard -i'
+#bind -t vi-copy y copy-selection # `y` copies the current selection to one of tmux's "paste buffers"
+#bind -T vi-copy V rectangle-toggle # `V` changes between line- and columnwise selection
+#bind -T vi-copy Y copy-end-of-line # ^1
+#bind + delete-buffer
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -90,3 +90,4 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/dotfiles/tmux/plugins/tpm/tpm'
 #
+set -g @resurrect-processes 'cmus'
