--- a/vim/templates/perl_basic_header.template
+++ b/vim/templates/perl_basic_header.template
@@ -2,16 +2,15 @@
 
 # {{{ ---------------------------------------------------------------------- #
 #
-# Name: perl_basic_header.template
-# Purpose: This script does ...X,Y, and Z.
-# Compatible:
-# Requirements:
+# Name:		example1.pl		
+# Purpose: This script ...
+# 
 #
 # Version: 1.0
 # Author: Kevin Bowen <kevin.bowen@gmail.com>
 # 
-# Original source:
-# Updated: 20191003
+# Original source: Chapter X, Beginning Perl, Lee
+# Updated: 20191108
 #
 # }}} ---------------------------------------------------------------------- #
 
