--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "vim/bundle/syntastic"]
-	path = vim/bundle/syntastic
-    url = https://github.com/vim-syntastic/syntastic.git
 [submodule "tmux/plugins/tmux-resurrect"]
 	path = tmux/plugins/tmux-resurrect
 	url = https://github.com/tmux-plugins/tmux-resurrect.git
@@ -10,24 +7,42 @@
 [submodule "tmux/plugins/tpm"]
 	path = tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
+[submodule "vim/bundle/ale"]
+    path = vim/bundle/ale
+    url = https://github.com/dense-analysis/ale.git 
+[submodule "vim/bundle/fzf"]
+    path = vim/bundle/fzf
+    url = https://github.com/junegunn/fzf
+[submodule "vim/bundle/fzf.vim"]
+    path = vim/bundle/fzf.vim
+    url = https://github.com/junegunn/fzf
+[submodule "vim/bundle/tabular"]
+    path = vim/bundle/tabular
+    url = https://github.com/godlygeek/tabular
+[submodule "vim/bundle/vim-fugitive"]
+    path = vim/bundle/vim-fugitive
+    url = https://github.com/tpope/vim-fugitive
+[submodule "vim/bundle/vim-markdown"]
+    path = vim/bundle/vim-markdown
+    url = https://github.com/preservim/vim-markdown
+[submodule "vim/bundle/markdown-preview.nvim"]
+    path = vim/bundle/markdown-preview.nvim
+    url = https://github.com/iamcco/markdown-preview.nvim
 [submodule "vim/bundle/vim-misc"]
 	path = vim/bundle/vim-misc
 	url = https://github.com/xolox/vim-misc.git
 [submodule "vim/bundle/vim-session"]
 	path = vim/bundle/vim-session
 	url = https://github.com/xolox/vim-session.git
+[submodule "vim/bundle/vim-unimpaired"]
+    path = vim/bundle/vim-unimpaired
+    url = https://github.com/tpope/vim-unimpaired
 [submodule "vim/bundle/vimwiki"]
 	path = vim/bundle/vimwiki
 	url = https://github.com/vimwiki/vimwiki
 [submodule "vim/bundle/vim-devicons"]
 	path = vim/bundle/vim-devicons
 	url = https://github.com/ryanoasis/vim-devicons.git
-[submodule "vim/bundle/vim-fugitive"]
-	path = vim/bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/ansible-vim"]
-	path = vim/bundle/ansible-vim
-	url = https://github.com/pearofducks/ansible-vim
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
 	url = https://github.com/preservim/nerdtree
@@ -37,9 +52,6 @@
 [submodule "vim/bundle/vim-repeat"]
 	path = vim/bundle/vim-repeat
 	url = https://github.com/tpope/vim-repeat
-[submodule "vim/bundle/SimpylFold"]
-	path = vim/bundle/SimpylFold
-	url = https://github.com/tmhedberg/SimpylFold
 [submodule "vim/bundle/tagbar"]
 	path = vim/bundle/tagbar
 	url = https://github.com/preservim/tagbar
